Edited Location Search

--- a/notebooks/CAC Agri Data.ipynb
+++ b/notebooks/CAC Agri Data.ipynb
@@ -1522,6 +1522,66 @@
    "source": [
     "agriculture_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e42ef5d3-000d-4134-a080-49a7fa67679c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Commodity_Unnamed: 0_level_1           Broccoli\n",
+       "Variety/ Source_Unnamed: 1_level_1     Imported\n",
+       "PAPINE_Lowest                               NaN\n",
+       "PAPINE_Highest                              NaN\n",
+       "PAPINE_Most Freq.                           NaN\n",
+       "CORONATION_Lowest                        2200.0\n",
+       "CORONATION_Highest                       2200.0\n",
+       "CORONATION_Most Freq.                    2200.0\n",
+       "CROSS ROADS_Lowest                          NaN\n",
+       "CROSS ROADS_Highest                         NaN\n",
+       "CROSS ROADS_Most Freq.                      NaN\n",
+       "CROSS ROADS_Sampars                         NaN\n",
+       "CROSS ROADS_Hi-Lo                           NaN\n",
+       "WATERLOO ROAD_Mega Mart                  2800.0\n",
+       "NEW KINGSTON_John R Wong                 1881.7\n",
+       "HALF-WAY TREE_Brooklyn                  1604.19\n",
+       "WASHINGTON BOULEVARD_Shopper's Fair     1649.06\n",
+       "DUHANEY PARK_Shopper's Fair              1775.8\n",
+       "LIGUANEA_General Foods                   3060.0\n",
+       "LIGUANEA_Shopper's Fair                     NaN\n",
+       "BARBICAN ROAD_Loshusan                   1587.0\n",
+       "BARBICAN ROAD_Hi-Lo                      3060.0\n",
+       "CONSTANT SPRING_Hi-Lo                   3060.89\n",
+       "CONSTANT SPRING_Select Grocers           3000.0\n",
+       "HARBOUR VIEW_Shoppers Fair               1888.1\n",
+       "RED HILLS ROAD_Lee's Food Fair          2480.18\n",
+       "RED HILLS ROAD_Price Smart                  NaN\n",
+       "PORTMORE_Progressive Foods               1525.0\n",
+       "PORTMORE_Mega Mart                       2800.0\n",
+       "PORTMORE_Joong                           2250.0\n",
+       "PORTMORE_Hi-Lo                          3060.89\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agriculture_data.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14365e03-34f8-4adc-a7d8-2d19b43dbdee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
